Fix "The first result in a search gets cut off by the search bar" [skip ci]

--- a/website/static/css/search-bar.css
+++ b/website/static/css/search-bar.css
@@ -62,3 +62,6 @@
 #searchPageFullBar:-ms-input-placeholder {
    color: #738EA2;
 }
+#searchControls>.row {
+    padding-top: 60px;
+}
